tests/parse_print/issues/133/2/stderr.expected
Error:
    Parser error in file: tests/parse_print/issues/133/2/133_2.essence Error is:
ValidatorError tests/parse_print/issues/133/2/133_2.essence:6:6:
  |
6 |      int(1,3)
  |      ^
Missing ,
